--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
